# pegasus

./: .gitignore  CMakeLists.txt
core/inst_handlers/zknd/: RvzkndFunctors.hpp  RvzkndInsts.cpp  RvzkndInsts.hpp  crypto-utils.hpp
core/observers/: STFLogger.cpp
tools/debugger/: CMakeLists.txt  main.cpp
